--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for espn.com",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [
     "sports"
