--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API for espn.com",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "start:dev": "nodemon --watch"
   },
   "keywords": [
     "sports"
@@ -14,6 +15,8 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "install": "^0.13.0",
+    "nodemon": "^2.0.15"
   }
 }
