--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "API for espn.com",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "start:dev": "nodemon --watch"
+    "start": "nodemon server.js",
+    "start:dev": ""
   },
   "keywords": [
     "sports"
