--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "broken-link-checker": "^0.7.8",
     "cheerio": "^1.0.0-rc.10",
     "express": "^4.17.1",
     "install": "^0.13.0",
